# PAGETools

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploy_docs.yml  python-package.yml
docs/: index.md  installation.md  package.json
docs/.vitepress/: config.mts
docs/tools/: index.md
docs/tools/analytics/: get_codec.md  get_text_count.md
docs/tools/transformation/: change_index.md  extraction.md  line2page.md  regularization.md
pagetools/cli/: __init__.py
pagetools/cli/analytics/: get_char_occurence.py  get_codec.py  get_confidence.py  get_text_count.py
pagetools/cli/management/: cull.py
pagetools/cli/transformations/: change_index.py  extract.py  extract_lines.py  line2page.py  regularize.py  regularize_text.py
pagetools/resources/rulesets/: default.json  ligatures_consonantal.json  ligatures_vocal.json  punctuation.json  quotes.json  roman_digits.json  uvius.json  various.json
pagetools/src/: Extractor.py  Image.py  Page.py  Regularizer.py  Rules.py
pagetools/src/extraction/: Extractor.py
pagetools/src/line2page/: Line2Page.py  README.md  line2page.py  requirements.txt
pagetools/src/regularization/: Regularizer.py  Rules.py
pagetools/src/utils/: constants.py  filesystem.py  img_processing.py  page_processing.py
pagetools/tests/src/utils/: test_page_processing.py
